TAVERNA-893 USe HTTPClient 4 and MessageDigest
Now supports all Java-supported message digests, including
SHA-1 and SHA-256

Local files supported via java.nio Path URIs.

No longer supported are classical URLs
registered with URLConnection, like ftp://